# SPhysX-Cross

./: .gitignore  BuildLinux_debug.sh  BuildLinux_release.sh  BuildMacOS.sh  CMakeLists.txt  README.md  build_linux_debug.sh  build_linux_release.sh  build_macosx_debug.sh  build_macosx_release.sh  build_windows_debug.bat  build_windows_release.bat  download_dll.ps1  download_prebuilt_sdk_linux.sh  download_prebuilt_sdk_macosx.sh  download_prebuilt_sdk_windows.ps1  xmake.lua
Examples/: xmake.lua
Examples/BouncingBall/: xmake.lua
Examples/LibraryWorks/: main.cpp  xmake.lua
PhysX-CMake/: CMakeLists.txt
PhysX-CMake/physx/: generate_projects.bat  generate_projects.sh
PhysX-CMake/physx/source/compiler/cmake/linux/: CMakeLists.txt
